# raps

./: .fossa.yml  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DISTRIBUTION_UPDATE.md  GEMINI.md  IMPLEMENTATION_STATUS.md  LICENSE  MICROKERNEL_PLAN.md  MIGRATION_GUIDE.md  PHASE_2_COMPLETE.md  PUBLISHING.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PLAN.md  REPOSITORY_REVIEW.md  codecov.yml  deny.toml  dist-workspace.toml  fix-jekyll-links.py  fix-relative-links.py  install.ps1  install.sh  mkdocs.yml  purring-inventing-wreath.md  raps-distribution-spec.md  raps-optimization-issue-drafts.md  typos.toml
python/: README.md  pyproject.toml
python-bindings/: Cargo.toml  README.md  pyproject.toml
python-bindings/src/: lib.rs
python/src/raps/: __init__.py  __main__.py
raps/: CHANGELOG.md  Cargo.toml  MODULE_REORGANIZATION_COMPLETED.md  MONOREPO_STATUS.md  NOTICE  README.md  SECURITY.md  mkdocs.yml  pr-body.md
raps-acc/: Cargo.toml
raps-acc/src/: admin.rs  lib.rs  permissions.rs  types.rs  users.rs
raps-admin/: Cargo.toml
raps-admin/src/: error.rs  filter.rs  lib.rs  report.rs  types.rs
raps-admin/src/bulk/: executor.rs  mod.rs  retry.rs  state.rs
raps-admin/src/operations/: add_user.rs  folder_rights.rs  mod.rs  remove_user.rs  update_role.rs
raps-admin/tests/: integration_tests.rs
raps-admin/tests/integration/: add_user_tests.rs  dry_run_tests.rs  folder_rights_tests.rs  mod.rs  remove_user_tests.rs  resume_tests.rs  update_role_tests.rs
raps-cli/: Cargo.toml  tmpclaude-7158-cwd
raps-cli/src/: lib.rs  main.rs  plugins.rs  shell.rs
raps-cli/src/commands/: acc.rs  admin.rs  api.rs  auth.rs  bucket.rs  config.rs  da.rs  demo.rs  folder.rs  generate.rs  hub.rs  issue.rs  item.rs  mod.rs  object.rs  pipeline.rs  plugin.rs  project.rs  reality.rs  rfi.rs  translate.rs  webhook.rs
raps-cli/src/mcp/: auth_guidance.rs  mod.rs  server.rs  tools.rs
raps-cli/src/output/: formatter.rs  mod.rs  tests.rs
raps-cli/tests/: api_tests.rs  auth_commands.rs  bucket_commands.rs  cli_general.rs  config_commands.rs  da_commands.rs  exit_codes_test.rs  json_schema_test.rs  live_api_tests.rs  logging_test.rs  mcp_auth_tests.rs  non_interactive_test.rs  object_commands.rs  output_consistency_test.rs  output_format_test.rs  output_tty_test.rs  redaction_test.rs  translate_commands.rs  webhook_commands.rs
raps-community/: Cargo.toml
raps-community/src/acc/: assets.rs  rfi.rs
raps-community/src/plugin/: mod.rs
raps-da/: Cargo.toml
raps-da/src/: lib.rs
raps-derivative/: Cargo.toml
raps-derivative/src/: download.rs  lib.rs  manifest.rs  translate.rs  types.rs
raps-derivative/tests/: integration_tests.rs
raps-dm/: Cargo.toml
raps-dm/src/: folder.rs  hub.rs  item.rs  lib.rs  project.rs  types.rs
raps-dm/src/acc/: assets.rs  checklists.rs  issues.rs  mod.rs  rfi.rs  submittals.rs
raps-dm/tests/: integration_tests.rs
raps-kernel/: Cargo.toml
raps-kernel/benches/: README.md  kernel_vs_monolith.rs
raps-kernel/src/: auth.rs  config.rs  error.rs  http.rs  interactive.rs  lib.rs  logging.rs  output.rs  progress.rs  prompts.rs  storage.rs  test_utils.rs  types.rs
raps-kernel/src/auth/: client.rs  device_code.rs  mod.rs  three_legged.rs  two_legged.rs
raps-kernel/src/config/: endpoints.rs  mod.rs  profiles.rs
raps-kernel/src/http/: mod.rs
raps-kernel/src/pipeline/: mod.rs
raps-kernel/src/storage/: file.rs  mod.rs  token.rs
raps-kernel/src/types/: mod.rs  object.rs  urn.rs
raps-kernel/tests/: integration_tests.rs
raps-oss/: Cargo.toml
raps-oss/benches/: upload_bench.rs
raps-oss/src/: bucket.rs  download.rs  lib.rs  object.rs  signed_url.rs  upload.rs
raps-oss/tests/: integration_tests.rs
raps-pro/: Cargo.toml
raps-pro/src/analytics/: mod.rs
raps-pro/src/compliance/: mod.rs
raps-ssa/: Cargo.toml
raps-ssa/src/: lib.rs
raps-webhooks/: Cargo.toml
raps-webhooks/src/: lib.rs
raps/.cargo/: config.toml
raps/.github/: FUNDING.yml  dependabot.yml
raps/.github/ISSUES/: v0.4-001-global-output-format.md  v0.4-003-global-logging-flags.md  v0.4-005-yaml-output-support.md  v0.5-007-proxy-support-docs.md  v0.5-008-http-client-timeout-config.md  v0.6-002-sbom-build-provenance.md  v0.6-003-changelog.md
raps/.github/ISSUE_TEMPLATE/: feature_request.md
raps/.github/workflows/: branch-protection-check.yml  docs.yml  release.yml
raps/benches/: monolith_benchmarks.rs
raps/docs/: BRANCH_PROTECTION.md  RELEASE.md  STABILITY.md  examples.md  installation.md  proxy-support.md  sbom.md  troubleshooting.md
raps/docs/cli/: exit-codes.md
raps/docs/commands/: acc.md  generate.md  objects.md  pipeline.md  plugin.md  reality-capture.md  translation.md
raps/docs/logo/: README.md
raps/issues/: README.md  issue-02-resume-disk-writes.md  issue-04-blocking-async.md  issue-09-concurrency-flag.md  issue-11-missing-delete-ops.md  issue-15-memory-buffering.md  issue-fix-blocking-async.md  issue-strict-ci-mode.md  issue-unify-concurrency-retry.md
raps/raps/: CODE_OF_CONDUCT.md  Cargo.toml
raps/raps-community/: Cargo.toml
raps/raps-community/src/: lib.rs
raps/raps-community/tests/: integration_tests.rs
raps/raps-da/: Cargo.toml
raps/raps-derivative/: Cargo.toml
raps/raps-dm/: Cargo.toml
raps/raps-enterprise/: Cargo.toml
raps/raps-enterprise/src/: lib.rs
raps/raps-kernel/: Cargo.toml
raps/raps-kernel/benches/: kernel_vs_monolith.rs
raps/raps-kernel/src/: lib.rs
raps/raps-kernel/tests/: integration_tests.rs
raps/raps-oss/: Cargo.toml
raps/raps-oss/src/: lib.rs  types.rs  upload.rs
raps/raps-pro/: Cargo.toml
raps/raps-pro/src/: lib.rs  license.rs
raps/raps-ssa/src/: jwt.rs  robot.rs
raps/raps/.github/: CODEOWNERS
raps/raps/docs/: configuration.md  features.md  limitations.md  requirements.txt
raps/raps/issues/: issue-03-chunk-buffer-reuse.md  issue-cache-downloads.md  issue-reduce-state-io.md
raps/scripts/: fix-jekyll-links.py  generate-sbom.ps1  sign-binaries.ps1
raps/src/: config.rs  lib.rs  logging.rs  main.rs  tier.rs
raps/tests/: integration_test.rs
(+310 files in other folders)
