[package]
name = "raps"
version = "3.7.0"
edition = "2024"
description = "🌼 RAPS (rapeseed) — Rust Autodesk Platform Services CLI"
authors = ["Dmytro Yemelianov"]
license = "Apache-2.0"
repository = "https://github.com/dmytro-yemelianov/raps.git"
homepage = "https://rapscli.xyz"
documentation = "https://rapscli.xyz/docs"
readme = "README.md"
keywords = ["autodesk", "aps", "forge", "bim360", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"
exclude = [
    ".github/",
    ".env",
    ".env.example",
    "target/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "raps"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Interactive prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.15"

# HTTP client (using rustls-tls instead of OpenSSL for better cross-compilation support)
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# Environment loading
dotenvy = "0.15"

# Progress bars
indicatif = "0.18"

# Terminal colors
colored = "2.1"

# Base64 encoding for URNs
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# OAuth browser flow
webbrowser = "0.8"
tiny_http = "0.12"

# Secure token storage  
directories = "5.0"
keyring = "2.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.8"

# HTTP utilities (retry, backoff)
# Note: rand is already included above

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for secret redaction
regex = "1.10"

# MCP Server (Model Context Protocol)
rmcp = { version = "0.12", features = ["server", "transport-io", "schemars"] }
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustyline = "^14.0.0"
rustyline-derive = "^0.10.0"
shlex = "1.3.0"

[dev-dependencies]
# CLI testing utilities
assert_cmd = "2.0"
predicates = "3.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
