[workspace]
members = [
    "raps-kernel",
    "raps-oss",
    "raps-derivative",
    "raps-dm",
    "raps-da",
    "raps-acc",
    "raps-webhooks",
    "raps-reality",
    "raps-admin",
    "raps-cli",
]
# python-bindings excluded from workspace - built separately with maturin
exclude = ["python-bindings"]
resolver = "2"

[workspace.package]
version = "4.4.0"
edition = "2024"
authors = ["Dmytro Yemelianov"]
license = "Apache-2.0"
repository = "https://github.com/dmytro-yemelianov/raps.git"
homepage = "https://rapscli.xyz"
documentation = "https://rapscli.xyz/docs"
rust-version = "1.88"

[workspace.dependencies]
# Internal crates
raps-kernel = { path = "raps-kernel" }
raps-oss = { path = "raps-oss" }
raps-derivative = { path = "raps-derivative" }
raps-dm = { path = "raps-dm" }
raps-da = { path = "raps-da" }
raps-acc = { path = "raps-acc" }
raps-webhooks = { path = "raps-webhooks" }
raps-reality = { path = "raps-reality" }
raps-admin = { path = "raps-admin" }

# CLI framework
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Interactive prompts
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.15"

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# Environment loading
dotenvy = "0.15"

# Progress bars
indicatif = "0.18"

# Terminal colors
colored = "2.1"

# Base64 encoding for URNs
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# OAuth browser flow
webbrowser = "0.8"
tiny_http = "0.12"

# Secure token storage
directories = "5.0"
keyring = "2.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.20", features = ["v4", "serde"] }

# Random number generation
rand = "0.8"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for secret redaction
regex = "1.10"

# Glob pattern matching
glob = "0.3"

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io", "schemars"] }
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Interactive shell
rustyline = "14.0"
rustyline-derive = "0.10"
shlex = "1.3"

# Testing
assert_cmd = "2.1"
predicates = "3.1"
raps-mock = { git = "https://github.com/dmytro-yemelianov/raps-mock.git", tag = "v0.2.0" }
tokio-test = "0.4"
tempfile = "3.14"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
