[package]
name = "raps-py"
version = "4.3.0"
edition = "2024"
authors = ["Dmytro Yemelianov"]
license = "Apache-2.0"
repository = "https://github.com/dmytro-yemelianov/raps.git"
description = "Python bindings for RAPS - Rust Autodesk Platform Services CLI"
# Not published to crates.io - distributed via PyPI
publish = false
keywords = ["autodesk", "aps", "forge", "cad", "bim", "python"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"
rust-version = "1.88"

[lib]
name = "raps"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

# Internal crates (path dependencies)
raps-kernel = { path = "../raps-kernel" }
raps-oss = { path = "../raps-oss" }
raps-derivative = { path = "../raps-derivative" }
raps-dm = { path = "../raps-dm" }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base64 encoding
base64 = "0.21"

[build-dependencies]
pyo3-build-config = "0.22"
