[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "raps-bindings"
version = "4.2.3"
description = "Python bindings for RAPS - programmatic access to Autodesk Platform Services"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Dmytro Yemelianov" }]
keywords = ["autodesk", "aps", "forge", "cad", "bim", "python", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://rapscli.xyz"
Documentation = "https://rapscli.xyz/docs"
Repository = "https://github.com/dmytro-yemelianov/raps"
Changelog = "https://github.com/dmytro-yemelianov/raps/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "raps"
