[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "raps"
dynamic = ["version"]
description = "Rust CLI for Autodesk Platform Services"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["autodesk", "aps", "forge", "cad", "bim", "cli", "rust"]
authors = [
    {name = "Dmytro Yemelianov"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://rapscli.xyz"
Repository = "https://github.com/dmytro-yemelianov/raps"
Documentation = "https://rapscli.xyz/docs"

[tool.maturin]
bindings = "bin"
strip = true
compatibility = "manylinux2014"
manifest-path = "../raps-cli/Cargo.toml"
