[package]
name = "raps-acc"
description = "ACC/BIM 360 clients for RAPS (issues, RFI, assets, submittals, checklists)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raps-kernel.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Date/time handling
chrono.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
raps-kernel = { workspace = true, features = ["test-utils"] }
