[package]
name = "raps-admin"
description = "Bulk user management operations for ACC/BIM 360 accounts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raps-kernel.workspace = true
raps-acc.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Date/time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# User config directories
directories.workspace = true

# Progress bars
indicatif.workspace = true

# Glob pattern matching for filters
glob.workspace = true

[dev-dependencies]
raps-mock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
raps-kernel = { workspace = true, features = ["test-utils"] }
