[package]
name = "raps-cli"
description = "RAPS (rapeseed) - Rust Autodesk Platform Services CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://rapscli.xyz"
documentation = "https://rapscli.xyz/docs"
readme = "../README.md"
keywords = ["autodesk", "aps", "forge", "bim360", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version.workspace = true

[[bin]]
name = "raps"
path = "src/main.rs"

[dependencies]
# Workspace crates
raps-kernel.workspace = true
raps-oss.workspace = true
raps-derivative.workspace = true
raps-dm.workspace = true
raps-da.workspace = true
raps-acc.workspace = true
raps-admin.workspace = true
raps-webhooks.workspace = true
raps-reality.workspace = true

# CLI framework
clap.workspace = true
clap_complete.workspace = true

# Interactive prompts
dialoguer.workspace = true
console.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Progress bars
indicatif.workspace = true

# Terminal colors
colored.workspace = true

# Base64 encoding for URNs
base64.workspace = true

# Date/time handling
chrono.workspace = true

# UUID generation
uuid.workspace = true

# URL parsing
url.workspace = true
urlencoding.workspace = true

# MCP Server
rmcp.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Interactive shell
rustyline.workspace = true
rustyline-derive.workspace = true
shlex.workspace = true

# File handling
tokio-util.workspace = true
futures-util.workspace = true

# Directories
directories.workspace = true

# Random number generation
rand.workspace = true

# CSV output
csv.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
dotenvy.workspace = true
