[package]
name = "raps-community"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
description = "RAPS Community Tier - Extended features (ACC, DA, Reality, etc.)"

[dependencies]
raps-kernel = { path = "../raps-kernel" }
raps-oss = { path = "../raps-oss" }
raps-derivative = { path = "../raps-derivative" }
raps-dm = { path = "../raps-dm" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
