[package]
name = "raps-dm"
description = "Data Management client for RAPS (hubs, projects, folders, items)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raps-kernel.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true

# Date/time handling
chrono.workspace = true

[dev-dependencies]
raps-mock.workspace = true
tokio-test.workspace = true
tempfile.workspace = true
