[package]
name = "raps-pro"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Commercial"
description = "RAPS Pro Tier - Enterprise features (Analytics, Audit, Compliance, etc.)"

[dependencies]
raps-kernel = { path = "../raps-kernel" }
raps-community = { path = "../raps-community" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }

[lints]
workspace = true
