[package]
name = "raps-ssa"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "RAPS SSA Service - Secure Service Accounts client"

[lib]
name = "raps_ssa"
path = "src/lib.rs"

[dependencies]
raps-kernel = { path = "../raps-kernel" }
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
base64.workspace = true

[dev-dependencies]
tokio-test = "0.4"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
