[package]
name = "raps-webhooks"
description = "Webhooks client for RAPS"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
raps-kernel.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# HTTP client
reqwest.workspace = true

# Async runtime
tokio.workspace = true
