[workspace]
resolver = "2"
members = [
    "raps-kernel",
    "raps-oss",
    "raps-derivative",
    "raps-dm",
    "raps-ssa",
    "raps-community",
    "raps-pro",
    "raps",
]

[workspace.package]
version = "3.3.1"
edition = "2021"
authors = ["RAPS Contributors"]
license = "Apache-2.0"
repository = "https://github.com/dmytro-yemelianov/raps"
homepage = "https://rapscli.xyz"
documentation = "https://docs.rapscli.xyz"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment loading
dotenvy = "0.15"

# Secure token storage
directories = "5.0"
keyring = "2.3"

# Base64 encoding
base64 = "0.21"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.8"

# Regex for secret redaction
regex = "1.10"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# OAuth browser flow
webbrowser = "0.8"
tiny_http = "0.12"

# Progress bars
indicatif = "0.17"

# Terminal colors
colored = "2.1"

# CSV
csv = "1.3"

# CLI framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Interactive prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io", "schemars"] }
schemars = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"

# Build Performance: Reduce PDB/debug symbol overhead
# See: specs/002-monorepo-microkernel-app/plan.md
[profile.dev]
debug = 0
opt-level = 0
incremental = true

[profile.test]
debug = 0
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
