[workspace]
resolver = "2"
members = [
    "raps-kernel",
    "raps-oss",
    "raps-derivative",
    "raps-dm",
    "raps-ssa",
    "raps-community",
    "raps-pro",
    ".",
]

[workspace.package]
version = "3.3.3"
edition = "2021"
authors = ["RAPS Contributors"]
license = "Apache-2.0"
repository = "https://github.com/dmytro-yemelianov/raps"
homepage = "https://rapscli.xyz"
documentation = "https://docs.rapscli.xyz"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment loading
dotenvy = "0.15"

# Secure token storage
directories = "5.0"
keyring = "2.3"

# Base64 encoding
base64 = "0.21"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.8"

# Regex for secret redaction
regex = "1.10"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File handling
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# OAuth browser flow
webbrowser = "0.8"
tiny_http = "0.12"

# Progress bars
indicatif = "0.17"

# Terminal colors
colored = "2.1"

# CSV
csv = "1.3"

# CLI framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Interactive prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# MCP Server
rmcp = { version = "0.12", features = ["server", "transport-io", "schemars"] }
schemars = "0.8"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"

[profile.dev]
debug = 0
opt-level = 0
incremental = true

[profile.test]
debug = 0
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[package]
name = "raps"
version = "3.3.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "🌼 RAPS (rapeseed) — Rust Autodesk Platform Services CLI"
readme = "README.md"
keywords = ["autodesk", "aps", "forge", "bim360", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".github/",
    ".env",
    ".env.example",
    "target/",
    "archive/",
    "*.md",
    "!README.md",
]

[[bin]]
name = "raps"
path = "src/main.rs"

# =============================================================================
# Product Tier Feature Flags
# =============================================================================
# Build commands:
#   Core only:     cargo build --no-default-features --features core
#   Community:     cargo build  (default)
#   Pro:           cargo build --features pro
# =============================================================================

[features]
default = ["community"]

# Core tier: Essential foundation (Auth, OSS, Derivative, DM)
core = []

# Community tier: Extended features (ACC, DA, Reality, Webhooks, Pipelines, Plugins)
community = ["core", "dep:raps-community"]

# Pro tier: Enterprise features (Analytics, Audit, Compliance, SSO)
# Note: raps-pro is in a separate private repository
# pro = ["community", "dep:raps-pro"]  # Uncomment when raps-pro is available
pro = ["community"]  # Placeholder - raps-pro must be added separately

[dependencies]
# Service crates (microkernel architecture) - always included
raps-kernel = { path = "./raps-kernel" }
raps-oss = { path = "./raps-oss" }
raps-derivative = { path = "./raps-derivative" }
raps-dm = { path = "./raps-dm" }
raps-ssa = { path = "./raps-ssa" }

# Tiered feature crates (optional)
raps-community = { path = "./raps-community", optional = true }
# raps-pro = { path = "./raps-pro", optional = true }  # Commercial - separate private repo

# CLI framework
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"

# Interactive prompts
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"

# HTTP client (using rustls-tls instead of OpenSSL for better cross-compilation support)
reqwest = { version = "0.11", features = ["json", "stream", "multipart", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"

# Environment loading
dotenvy = "0.15"

# Progress bars
indicatif = "0.17"

# Terminal colors
colored = "2.1"

# Base64 encoding for URNs
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File handling
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# OAuth browser flow
webbrowser = "0.8"
tiny_http = "0.12"

# Secure token storage  
directories = "5.0"
keyring = "2.3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Random number generation
rand = "0.8"

# HTTP utilities (retry, backoff)
# Note: rand is already included above

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for secret redaction
regex = "1.10"

# MCP Server (Model Context Protocol)
rmcp = { version = "0.12", features = ["server", "transport-io", "schemars"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# CLI testing utilities
assert_cmd = "2.0"
predicates = "3.1"

criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[test]]
name = "integration_test_atomic_changes"
path = "tests/integration/test_atomic_changes.rs"

[[bench]]
name = "monolith_benchmarks"
harness = false
