[package]
name = "raps-community"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "RAPS Extended Features (ACC, DA, Reality, etc.)"

[dependencies]
raps-kernel = { path = "../raps-kernel" }
raps-oss = { path = "../raps-oss" }
raps-derivative = { path = "../raps-derivative" }
raps-dm = { path = "../raps-dm" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
