[package]
name = "raps-derivative"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "RAPS Model Derivative Service - Translation and manifest client"

[dependencies]
raps-kernel = { path = "../raps-kernel" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
urlencoding = { workspace = true }