[package]
name = "raps-oss"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true
description = "RAPS OSS Service - Object Storage Service client"

[dependencies]
raps-kernel = { path = "../raps-kernel" }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "upload_bench"
harness = false